--- a/Todo.txt
+++ b/Todo.txt
@@ -1,10 +1,14 @@
 TODO List
 
+- Code formatting
+- Use exceptions for error handling
+- Improve Matrix class functionality/cleanliness
 - Ultimate Tic Tac Toe
 - Random Player (chooses moves randomly)
 - Timekeeping (execution time)
 - More statistics/metrics
 - Organize codebase (.cpp and .h folders, build folder, more complex makefile, etc.)
+- Optimize (inline some small functions, reduce parameter copying, etc.)
 - Prettify/color-code command line output
 - Perfect Player (via minimax)
 - Smarter weight crossover
